# hptsu-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish-docker.yml  publish-mcp-registry.yml  publish-pypi.yml
deploy/: README.md  docker-compose.example.yml  nginx-mcp.conf
docs/: CLIENT_CONFIGS.md
mcpb/: manifest.json
src/hptsu_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_server.py
