[project]
name = "hptsu-mcp"
version = "0.3.0"
description = "MCP server for searching Russian/EAEU vehicle compliance documents on hpt.su — type approvals (ОТТС/СБКТС/ОТШ), conformity certificates, declarations, type-approval notifications (СУТ)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "hpt.su", email = "mcp@hpt.su" },
]
maintainers = [
    { name = "hpt.su", email = "mcp@hpt.su" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "hpt.su",
    "type-approval",
    "otts",
    "sbkts",
    "vehicle-certification",
    "eaeu",
    "russia",
    "conformity-certificate",
    "declaration-of-conformity",
    "tr-cu-018",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.urls]
Homepage = "https://hpt.su"
Documentation = "https://hpt.su/api/v1/docs/"
Repository = "https://github.com/hpt-su/hptsu-mcp"
"Bug Tracker" = "https://github.com/hpt-su/hptsu-mcp/issues"

[project.scripts]
hptsu-mcp = "hptsu_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hptsu_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
